@@ -180,7 +180,6 @@
                                         <rect key="frame" x="224" y="158" width="112" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                                        <color key="textColor" red="0.58039215690000001" green="0.066666666669999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="CHRONIC CONDITONS:" lineBreakMode="tailTruncation" minimumFontSize="10" id="7bI-qE-RQA">
@@ -532,7 +531,6 @@ hReader allows you to gather, correct, and manage your health data. This service
                 <relationship kind="outlet" name="functionalStatusTypeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="gridView" candidateClass="HRGridTableView"/>
                 <relationship kind="outlet" name="headerView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="immunizationsUpToDateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="medicationRefillLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="patientNameLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="planOfCareLabel" candidateClass="UILabel"/>
@@ -542,9 +540,6 @@ hReader allows you to gather, correct, and manage your health data. This service
                 <relationship kind="outlet" name="pulseNormalLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="recentConditionsDateLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="recentConditionsLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="recentEncountersDateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="recentEncountersDescriptionLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="recentEncountersTypeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="upcomingEventsLabel" candidateClass="UILabel"/>
                 <relationship kind="outletCollection" name="labels" candidateClass="UILabel"/>
                 <relationship kind="outletCollection" name="medicationDosageLabels" candidateClass="UILabel"/>
