@@ -21,7 +21,7 @@
         "title": "upcoming event title",
         "plan_of_care": "plan of care",
         "follow_up_appointment_date": 1338382800,
-        "medication_refill": "medication refill"
+        "medication_refill": []
       }
     ],
     
