@@ -23,7 +23,7 @@
         "title": "Annual checkup",
         "plan_of_care": "plan of care",
         "follow_up_appointment_date": 1342357200,
-        "medication_refill": "medication refill"
+        "medication_refill": []
       }
     ],
   
