@@ -1,3 +1,14 @@
+# 2012-4-12
+
+- updated patient data files
+- finish showing all data on the summary view after the summary view refactor
+
+The following changes lay the foundation for the tools menu but customizations to applet visibility and sort order are available only at compile time.
+
+- list of applets is now stored per-patient
+- different patients can show different applets
+- applets can be ordered per patient
+
 # 2012-4-11
 
 - Setup api to pass in tap events to applet tiles
